--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,13 @@
-body {
-    background-color: lightblue;   
+html {
+  background-color: #fefefe;
 }
-
+body {
+  font-family: "Open Sans";
+  color: #454545;
+  font-size: 16px;
+  margin: 1em auto;
+  max-width: 800px;
+  padding: 1em;
+  line-height: 1.4;
+  text-align: justify;
+}
