--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -4,10 +4,13 @@
 @color-body: #fefefe;
 @color-body-text: #454545;
 
-html{
+html
+{
     background-color: @color-body;
 }
-body{
+
+body
+{
     font-family: @font;
     color: @color-body-text;
     font-size: 16px;
@@ -16,4 +19,12 @@ body{
     padding: 1em;
     line-height: 1.4;
     text-align: justify;
+}
+
+header
+{
+    font-family: @font;
+    font-size: 20px;
+    word-spacing: 15px;
+    text-align: center;
 }
