--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -5,7 +5,7 @@
 
 @color-header-link: @color-body-text;
 @color-file-link: #07A;
-@color-tag-link: #505050;
+@color-time-link: #505050;
 
 
 
@@ -36,8 +36,6 @@ header
     
     a
     {
-	text-decoration: none;
-
 	color: @color-header-link;
     }
 
@@ -46,21 +44,34 @@ header
 a
 {
     text-decoration: none;
-    
-    &.file
+}
+
+.oneline
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+li.main
+{
+    margin: 15px 0;
+    list-style-type: none;
+
+    .name
     {
 	color: @color-file-link;
     }
     
-    &.tag
+    .time
     {
-	color: @color-tag-link;
+	color: @color-time-link;
 	font-style: italic;
-	font-size: 14px;
+	font-size: 12px;
     }
-}
 
-li
-{
-    list-style-type: none;
+    .tag
+    {
+	.time;
+    }
 }
