--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -5,8 +5,7 @@
 
 @color-header-link: @color-body-text;
 @color-file-link: #07A;
-@color-time-link: #505050;
-
+@color-tag-link: #505050;
 
 
 html
@@ -33,6 +32,7 @@ header
     font-size: 20px;
     word-spacing: 15px;
     text-align: center;
+    margin-bottom: 20px;
     
     a
     {
@@ -53,25 +53,30 @@ a
 }
 
 
-li.main
+.tag,
+.time
 {
-    margin: 15px 0;
-    list-style-type: none;
+    color: @color-tag-link;
+    font-style: italic;
+    font-size: 12px;
+}
 
-    .name
+li.file-item
+{
+    margin-bottom: 15px;
+    list-style-type: none;
+    
+    a.name
     {
 	color: @color-file-link;
     }
-    
-    .time
-    {
-	color: @color-time-link;
-	font-style: italic;
-	font-size: 12px;
-    }
+}
 
-    .tag
+div.file-item
+{
+    div.name,
+    div.time
     {
-	.time;
+	text-align: center;
     }
 }
