--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@ html {
   background-color: #fefefe;
 }
 body {
-  font-family: "Open Sans";
+  font-family: "Droid Sans Mono";
   color: #454545;
   font-size: 16px;
   margin: 1em auto;
@@ -12,7 +12,7 @@ body {
   text-align: justify;
 }
 header {
-  font-family: "Open Sans";
+  font-family: "Droid Sans Mono";
   font-weight: bold;
   font-size: 20px;
   word-spacing: 15px;
@@ -39,14 +39,13 @@ a {
   font-size: 12px;
 }
 li.file-item {
-  margin-bottom: 15px;
   list-style-type: none;
 }
 div.file-item {
   text-align: center;
 }
 div.file-item div.render {
-  margin: 25px 0;
+  margin-top: 25px;
 }
 div.editor {
   text-align: center;
@@ -54,16 +53,26 @@ div.editor {
 }
 div.control {
   word-spacing: 10px;
-  margin: 10px 0;
 }
 div.control button {
   background: none!important;
   border: none;
   padding: 0!important;
-  font-family: "Open Sans";
+  font-family: "Droid Sans Mono";
   font-size: 16px;
   color: #07A;
   cursor: pointer;
+}
+div.named-input label {
+  display: inline-block;
+  min-width: 40px;
+  text-align: left;
+}
+li.file-item,
+div.upload,
+div.named-input,
+div.file-item .tags {
+  margin-bottom: 15px;
 }
 button.delete {
   color: red !important;
