--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,4 +1,4 @@
-@font: "Open Sans";
+@font: "Droid Sans Mono";
 
 @color-body: #fefefe;
 @color-body-text: #454545;
@@ -67,7 +67,6 @@ a
 
 li.file-item
 {
-    margin-bottom: 15px;
     list-style-type: none;
 }
 
@@ -77,7 +76,7 @@ div.file-item
     
     div.render
     {
-	margin: 25px 0;
+	margin-top: 25px;
     }
 }
 
@@ -91,7 +90,6 @@ div.editor
 div.control
 {
     word-spacing: 10px;
-    margin: 10px 0;
     
     button
     {
@@ -103,6 +101,24 @@ div.control
 	color: @color-link;
 	cursor: pointer;
     }
+}
+
+div.named-input
+{
+    label
+    {
+	display: inline-block;
+	min-width: 40px;
+	text-align: left;
+    }
+}
+
+li.file-item,
+div.upload,
+div.named-input,
+div.file-item .tags
+{
+    margin-bottom: 15px;
 }
 
 button.delete
