--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -137,3 +137,27 @@ div#error
     color: @color-care;
     text-align: center;
 }
+
+
+ul.pagination
+{
+    text-align: center;
+    li
+    {
+	display: inline;
+	
+    };
+    .disabled
+    {
+	color: @color-body-text !important;
+    }
+    .active
+    {
+	font-weight: bold !important;
+	color: @color-body-text !important;
+    }
+    .page-item
+    {
+	color: @color-link;
+    }
+}
