Add search bar style

--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -161,3 +161,10 @@ ul.pagination
 	color: @color-link;
     }
 }
+
+input#search-bar
+{
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: @common-margin
+}
